syntax = "proto3";
import "Documents/requests.proto";
import "Documents/responses.proto";

option csharp_namespace = "Persistify.Protos.Documents";

service DocumentService {
  rpc Add(AddDocumentsRequest) returns (AddDocumentsResponse);
  rpc Search(SearchDocumentsRequest) returns (SearchDocumentsResponse);
  rpc Delete(DeleteDocumentsRequest) returns(DeleteDocumentsResponse);
}
